k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ys2wl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ys2wl
  template:
    metadata:
      labels:
        app: ys2wl
    spec:
      containers:
        - name: ys2wl
          image: registry.hub.docker.com/bateau/ys2wl:v2.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /data
              name: config
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - hostPath:
            path: /data/disk2/opt/ys2wl
            type: ""
          name: config
