k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ys2wl
  annotations:
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: ys2wl.bateau.cloud
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ys2wl
                port:
                  number: 8080
  tls:
    - hosts:
        - ys2wl.bateau.cloud
      secretName: ys2wl-tls
